initial command structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-gcloud.json
+cmd/carapace-gcloud/carapace-gcloud
+cmd/carapace-gcloud/carapace-gcloud.test
+cmd/carapace-spec-gcloud/carapace-spec-gcloud
+dist
+docs/book
+profile.cov
